<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iHowHow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="color">畫筆顏色</string>  
    <string name="color_red">红色</string>  
    <string name="color_green">綠色</string>  
    <string name="color_blue">藍色</string>  
    <string name="width">畫筆寬度</string>  
    <string name="width_1">细</string>  
    <string name="width_2">中</string>  
    <string name="width_3">粗</string>  
    <string name="clear">清除畫面</string>  
    <string name="save">儲存畫面</string>  
    
</resources>
