<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:title="@string/color">  
        <menu>  
            <!-- 定義一組群組 -->  
            <group android:checkableBehavior="single">  
                <!-- 定義子目錄 -->  
                <item android:id="@+id/red" android:title="@string/color_red"/>     
                <item android:id="@+id/green" android:title="@string/color_green"/>     
                <item android:id="@+id/blue" android:title="@string/color_blue"/>   
            </group>  
        </menu>  
    </item>  
    <item android:title="@string/width">  
        <menu>  
            <!-- 定義子目錄 -->  
            <group>  
                <item android:id="@+id/width_1" android:title="@string/width_1"/>   
                <item android:id="@+id/width_2" android:title="@string/width_2"/>   
                <item android:id="@+id/width_3" android:title="@string/width_3"/>   
            </group>  
        </menu>  
    </item>
    <item android:id="@+id/text" android:title="新增文字"/>  
    <item android:id="@+id/picture" android:title="上貼圖"/>  
    <item android:id="@+id/clear" android:title="@string/clear"/>  
    <item android:id="@+id/save" android:title="@string/save"/>  

</menu>
